Fix CSS override

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -4,5 +4,5 @@
 @import "{{ site.theme }}";
 
 header {
-    background: url(images/background.png);
+    background: url(images/background.png) darkred;
 }
