--- a/assets/style.scss
+++ b/assets/style.scss
@@ -4,5 +4,5 @@
 @import "{{ site.theme }}";
 
 header {
-    url(../images/background.png) #880015
+    background: url(../images/background.png) #880015;
 }
