Update banner layout

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -6,3 +6,8 @@
 header {
     background: url(../images/background.png) #880015;
 }
+
+#banner .fork {
+    position: relative;
+    margin-left: -235px;
+}
