--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,12 @@ header {
 
 #banner .fork {
 	position: relative;
-	left: 70%;
+	left: 74%;
 	margin-left: -242px;
+}
+
+@media print, screen and (max-width: 720px) {
+  #banner .fork {
+    float: none;
+  }
 }
