--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,26 @@ header {
 	margin-left: -242px;
 }
 
+@media print, screen and (max-width: 325px) {
+  #banner {
+    display: none;
+  }
+}
+
+@media print, screen and (max-width: 480px) {
+  header h1 {
+    font-size: 20px;
+  }
+
+  #banner {
+    top: 58px;
+  }
+
+  #banner .fork {
+    left: 110%
+  }
+}
+
 @media print, screen and (max-width: 720px) {
   #banner .fork {
     float: none;
