Updated header position

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,12 +14,20 @@ header {
 }
 
 @media print, screen and (max-width: 325px) {
+  header {
+    position: relative;
+  }
+
   #banner {
     display: none;
   }
 }
 
 @media print, screen and (max-width: 480px) {
+  header {
+    position: fixed;
+  }
+
   header h1 {
     font-size: 20px;
   }
