--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,17 +13,17 @@ header {
 	margin-left: -242px;
 }
 
-@media print, screen and (max-width: 325px) {
-  header {
-    position: relative;
-  }
-
-  #banner {
-    display: none;
+@media print, screen and (max-width: 720px) {
+  #banner .fork {
+    float: none;
   }
 }
 
 @media print, screen and (max-width: 480px) {
+  section {
+    margin-top: 110px;
+  }
+
   header {
     position: fixed;
   }
@@ -42,8 +42,12 @@ header {
   }
 }
 
-@media print, screen and (max-width: 720px) {
-  #banner .fork {
-    float: none;
+@media print, screen and (max-width: 325px) {
+  header {
+    position: relative;
+  }
+
+  #banner {
+    display: none;
   }
 }
