Adjusted section margin-top at 325px

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,6 +43,10 @@ header {
 }
 
 @media print, screen and (max-width: 325px) {
+  section {
+    margin-top: 0px;
+  }
+
   header {
     position: relative;
   }
