--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,8 @@
   <body>
 
       <header>
-        <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+<!--         <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1> -->
+        <h1>UHS MRI Physics Team Journal Lounge</h1>
         <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
       </header>
 
