--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,9 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         <a href="https://script.google.com/macros/s/AKfycbyV13WLm-9n4DCShUr7gzq4eMd1shJEGLI5Q1GxBZCLNnAtSskFU6yWQpm6xyEM_M7l/exec" class="button fork"><strong>Latest Issue</strong></a>
+        <a href="https://docs.google.com/spreadsheets/d/1-4spJ677WzYBpuzcnHu_gO0mSnoR29mk/edit?usp=sharing&ouid=117155765040566319388&rtpof=true&sd=true" class="button fork"><strong>JMRI Spreadsheet</strong></a>
+        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
 
         {% if site.show_downloads %}
           <div class="downloads">
