--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,26 @@ header {
 	margin-left: 0;
 }
 
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.reading-item {
+  border: solid;
+  // background-color: #ffcc00;
+  // text-align: center;
+  margin: 5px;
+}
+
+.reading-item h3 {
+  text-align: center;
+}
+
+.reading-item ul {
+  padding-left: 20px;
+}
+
 @media print, screen and (max-width: 720px) {
   #banner .fork {
     float: none;
